--- a/ServiciiAutoProject/Views/Shared/_Layout.cshtml
+++ b/ServiciiAutoProject/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
             </nav>
         </div>
     }
-    <div class="container body-content">
+    <div class="container body-content no-padding">
         @RenderBody()
     </div>
     <div class="modal fade" id="notificationsModal" role="dialog">
