--- a/ServiciiAutoProject/Views/Login/Index.cshtml
+++ b/ServiciiAutoProject/Views/Login/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Index";
 }
 
-<body class="login-bg">
+<body class="login-bg" id="loginPage">
     <div class="container">
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-5 col-md-offset-4 col-lg-4 col-lg-offset-4">
